# api/controllers/movies.js
@@ -2,15 +2,24 @@
 
 const config = require('./../../env');
 const superagent = require('superagent');
+const elasticsearch = require('elasticsearch');
+const client = new elasticsearch.Client();
 
 const getBestRatedMovies = async (req, res) => {
     try {
         const page = req.swagger.params.page.value;
+        const username = req.swagger.params.username.value;
+
+        if (!username) {
+            console.log('No username given');
+            res.status(400).send('No username given');
+        }
 
         const movies = await fetchApiData(config.moviesApi.endpoints.bestRated, {
-            page: page ? page : 1,
-            adult: true
+            page: page ? page : 1
         });
+
+        await Promise.all(movies.results.map( movie => checkMoviesForSub(movie, username)));
 
         res.status(200).json({
             movies: movies.results,
@@ -20,7 +29,7 @@ const getBestRatedMovies = async (req, res) => {
         });
     } catch (e) {
         console.log(e);
-        res.status(500).send(e);
+        res.status(500).send('Internal server error');
     }
 };
 
@@ -36,6 +45,39 @@ const fetchApiData = async (endpoint, opts) => {
         });
 
     return body;
+};
+
+const checkMoviesForSub = async (movie, username) => {
+    const result = await client.search({
+        index: config.indices.subscriptions,
+        body: {
+            size: 1,
+            query: {
+                bool: {
+                    must: [
+                        {
+                            term: {
+                                user_id: {
+                                    value: username
+                                }
+                            }
+                        },
+                        {
+                            term: {
+                                movie_id: {
+                                    value: movie.id
+                                }
+                            }
+                        }
+                    ]
+                }
+            }
+        }
+    });
+
+    movie['subscribed'] = result.hits.hits.length !== 0;
+
+    return movie;
 };
 
 module.exports = {
