# api/controllers/subscriptions.js
@@ -7,7 +7,7 @@ const moment = require('moment');
 
 const postSubscribe = async (req, res) => {
     try {
-        const body = req.swagger.params.body.value;
+        const body = req.swagger.params.body.value.body;
 
         if (!body.username) {
             console.log('no username given');
@@ -20,27 +20,76 @@ const postSubscribe = async (req, res) => {
             res.status(400).send('no movie given');
         }
 
-        const id = body.username + '-' + moment.utc().valueOf();
+        const id = body.username + '-' + body.movie;
 
-        const result = await client.index({
+        await client.index({
             index: config.indices.subscriptions,
-            id: body.username + '-' + moment.utc().valueOf(),
+            id: id,
             body: {
                 id: id,
                 user_id: body.username,
                 movie_id: body.movie,
                 watched: false,
                 subscription_date: moment.utc().valueOf()
+            },
+            op_type: 'create'
+        });
+
+        res.status(201).send();
+    } catch (e) {
+        console.log(e);
+        res.status(500).send('Internal server error');
+    }
+};
+
+const postUnsubscribe = async (req, res) => {
+    try {
+        const body = req.swagger.params.body.value.body;
+
+        if (!body.username) {
+            console.log('no username given');
+            res.status(400).send('no username given');
+        }
+
+        if (!body.movie) {
+            console.log('no movie given');
+            res.status(400).send('no movie given');
+        }
+
+        await client.deleteByQuery({
+            index: config.indices.subscriptions,
+            body: {
+                query: {
+                    bool: {
+                        must: [
+                            {
+                                term: {
+                                    user_id: {
+                                        value: body.username
+                                    }
+                                }
+                            },
+                            {
+                                term: {
+                                    movie_id: {
+                                        value: body.movie
+                                    }
+                                }
+                            }
+                        ]
+                    }
+                }
             }
         });
 
-        res.status(201).json(result.body.acknowledged);
+        res.status(200).send();
     } catch (e) {
         console.log(e);
-        res.status(500).send(e);
+        res.status(500).send('Internal server error');
     }
 };
 
 module.exports = {
-    postSubscribe
+    postSubscribe,
+    postUnsubscribe
 };
